--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "twilio": "^3.76.1"
   }
