--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "twilio": "^3.76.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
