--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.6.2",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "twilio": "^3.76.1"
   },
   "devDependencies": {
